Crash in GetSetLocalTest: No support for deferred values in continuations

XMLWordPrintable

    • aarch64
    • linux

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/c82600aa-2448-475c-8c08-6f02a5b3f3af-S22953/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/0ecb7564-f67c-4dc7-a298-46b10541921c/runs/d22596eb-8d08-4fec-b9a6-d746f4741e97/workspace/open/src/hotspot/share/runtime/vframe_hp.cpp:112), pid=2134701, tid=2134743
      # assert(!Continuation::is_frame_in_continuation(thread(), fr())) failed: No support for deferred values in continuations
      #
      # JRE version: Java(TM) SE Runtime Environment (19.0+23) (fastdebug build 19-ea+23-1658)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 19-ea+23-1658, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
      # Problematic frame:
      # V [libjvm.so+0x19b8ef8] compiledVFrame::update_deferred_value(BasicType, int, jvalue)+0x398

            Assignee:
            Serguei Spitsyn
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated: