8286836: Crash in GetSetLocalTest: No support for deferred values in continuations